Add monthly summary for subscriptions
